# knuth-bendix-completion

./: .editorconfig  .gitignore  .ocamlinit  LICENSE  README.md  build_ocamlc.sh  build_ocamlopt.sh  clean.sh  clean_all.sh  dune  dune-project  kbc.ml  kbc.mli  knuth-bendix.opam  knuth_bendix.opam  load.ml  ocamlc.sh  ocamlopt.sh  trs.ml  trs.mli  util.ml
