opam-version: "2.0"
version: "1.1.3"
synopsis: "An implementation of Knuth-Bendix completion algorithm"
maintainer: "curegit"
authors: "curegit"
homepage: "https://github.com/curegit/knuth-bendix-completion"
bug-reports: "https://github.com/curegit/knuth-bendix-completion/issues"
dev-repo: "git://github.com/curegit/knuth-bendix-completion.git"
license: "MIT"
depends: ["dune" {build}]
build: ["dune" "build" "-p" name "-j" jobs]
